--- a/package.json
+++ b/package.json
@@ -24,15 +24,18 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "embla-carousel-react": "^8.5.2",
     "gh-pages": "^6.3.0",
     "jotai": "^2.12.0",
     "jsdom": "^26.0.0",
     "lucide-react": "^0.475.0",
+    "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-day-picker": "8.10.1",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.1.5",
     "sharp": "^0.33.5",
+    "sonner": "^1.7.4",
     "tailwind-merge": "^3.0.1",
     "tailwindcss": "^4.0.6",
     "tailwindcss-animate": "^1.0.7"
