--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -22,6 +22,8 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true,
     
+    "allowJs": true,
+    
     "baseUrl": ".",
     "paths": {
       "@/*": [
