--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-popover": "^1.1.6",
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-separator": "^1.1.2",
@@ -26,6 +27,7 @@
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.5.2",
     "gh-pages": "^6.3.0",
+    "idb": "^8.0.2",
     "jotai": "^2.12.0",
     "jsdom": "^26.0.0",
     "lucide-react": "^0.475.0",
@@ -34,6 +36,7 @@
     "react-day-picker": "8.10.1",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.1.5",
+    "react-time-picker": "^7.0.0",
     "sharp": "^0.33.5",
     "sonner": "^1.7.4",
     "tailwind-merge": "^3.0.1",
