--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
     "gh-pages": "^6.3.0",
     "idb": "^8.0.2",
     "jotai": "^2.12.0",
+    "jotai-optics": "^0.4.0",
     "jsdom": "^26.0.0",
     "lucide-react": "^0.475.0",
     "next-themes": "^0.4.4",
+    "optics-ts": "^2.4.1",
     "react": "^19.0.0",
     "react-day-picker": "8.10.1",
     "react-dom": "^19.0.0",
