--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "@tailwindcss/postcss": "^4.1.10",
     "@tailwindcss/vite": "^4.0.6",
     "@vite-pwa/assets-generator": "^0.2.6",
     "class-variance-authority": "^0.7.1",
